- bug(goalSetting): saveButton - refactor(moduleChange): collapse - refactor(moduleChange): list - feat(wordBank): getWords

--- a/src/pages/goalSetting/index.less
+++ b/src/pages/goalSetting/index.less
@@ -91,6 +91,7 @@
 
 .saveBtn {
   padding-top: 80px;
+  width: 100%;
   margin: 0 auto;
   font-size: 40px;
 }
