--- a/src/pages/wordBank/index.less
+++ b/src/pages/wordBank/index.less
@@ -5,6 +5,7 @@
   margin: 0 auto;
   max-width: 1600px;
   width: 100%;
+  min-height: 90vh;
   box-sizing: border-box;
 }
 
@@ -48,10 +49,9 @@
 
 
 .saveBtn {
-  align-self: flex-end;
-  width: 100%;
-  bottom: 30px;
-  padding: 10px;
+  margin-top: auto;
+  // TODO 悬浮
+  z-index: 1;
 
   text {
     font-size: 20px;
